--- a/app/package.json
+++ b/app/package.json
@@ -26,14 +26,14 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "7.0.0",
-    "@typescript-eslint/parser": "7.0.0",
-    "eslint": "9.24.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "eslint": "8.57.1",
     "eslint-config-next": "15.3.0",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-react-hooks": "4.6.0",
     "postcss": "8.4.30",
-    "prisma": "6.7.0",
+
     "tailwind-merge": "2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "1.0.7",
@@ -48,6 +48,7 @@
     "@hookform/resolvers": "3.9.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "6.7.0",
+    "prisma": "6.7.0",
     "@radix-ui/react-accordion": "1.2.0",
     "@radix-ui/react-alert-dialog": "1.1.1",
     "@radix-ui/react-aspect-ratio": "1.1.0",
@@ -135,5 +136,13 @@
     "> 0.5%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "overrides": {
+    "@typescript-eslint/eslint-plugin": {
+      "eslint": "$eslint"
+    },
+    "@typescript-eslint/parser": {
+      "eslint": "$eslint"
+    }
+  }
 }
