--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,7 @@
     "build": "prisma generate && next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
-    "postinstall": "prisma generate",
+    "postinstall": "echo 'Dependencies installed'",
     "db:migrate": "prisma migrate deploy",
     "db:seed": "prisma db seed",
     "db:reset": "prisma migrate reset --force",
