--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate && next build --experimental-build-mode=compile"
     "start": "next start -p $PORT",
     "lint": "next lint",
     "postinstall": "echo 'Dependencies installed'",
