--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,8 +14,12 @@ COPY . .
 # Generate Prisma client
 RUN npx prisma generate
 
-# Build the application
-RUN npm run build
+# Set environment variables to skip build-time analysis
+ENV SKIP_ENV_VALIDATION=true
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Build with skip flags
+RUN npm run build -- --experimental-build-mode=compile || npm run build
 
 # Expose port
 EXPOSE 3000
